update seo meta & time

--- a/index.html
+++ b/index.html
@@ -12,6 +12,34 @@
       href="assets/images/time.png"
       type="image/x-icon"
     />
+    <!-- meta data / SEO -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@halip26" />
+    <meta name="twitter:creator" content="@halip26" />
+    <meta name="twitter:title" content="Halip's Birthday Countdown" />
+    <meta
+      name="twitter:description"
+      content="Countdown to Halip's Birthday on Sunday, January 26, 2025"
+    />
+    <meta
+      name="twitter:image"
+      content="https://halip26.github.io/halips-birthday-countdown/assets/images/screenshot-preview.png"
+    />
+    <meta
+      name="twitter:url"
+      content="https://halip26.github.io/halips-birthday-countdown"
+    />
+    <meta property="og:title" content="Halip's Birthday Countdown" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Halip's Birthday Countdown" />
+    <meta
+      property="og:description"
+      content="Countdown to Halip's Birthday on Sunday, January 26, 2025"
+    />
+    <meta
+      property="og:image"
+      content="https://halip26.github.io/halips-birthday-countdown/assets/images/screenshot-preview.png"
+    />
   </head>
   <body>
     <section class="section-center">
