update current year

--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
           Made with 💙 by
           <a href="https://halip26.github.io/" target="_blank">Halip26</a>
         </h1>
+        <p>&#169; <span id="currentYear"></span> | All rights reserved</p>
       </div>
     </footer>
 
