refactor time left display headings for consistency

--- a/index.html
+++ b/index.html
@@ -51,22 +51,22 @@
         <div class="timeleft">
           <!-- format days -->
           <div class="format">
-            <h4 class="days">Days</h4>
+            <h4>Days</h4>
             <span>days</span>
           </div>
           <!-- format hours -->
           <div class="format">
-            <h4 class="days">Hours</h4>
+            <h4>Hours</h4>
             <span>hours</span>
           </div>
           <!-- format minutes -->
           <div class="format">
-            <h4 class="days">Minutes</h4>
+            <h4>Minutes</h4>
             <span>minutes</span>
           </div>
           <!-- format seconds -->
           <div class="format">
-            <h4 class="days">Seconds</h4>
+            <h4>Seconds</h4>
             <span>seconds</span>
           </div>
         </div>
